@@ -45,7 +45,7 @@
 		<submenu name="Shift-and-fade-times" displaytext="{tr(shiftFadeTimes)}">
 			<parameter type="int" name="volumeShiftTime" min="0" max="500" displaytext="{tr(volumeShiftTime)}">300</parameter>
 			<parameter type="int" name="messageShiftTime" min="0" max="500" displaytext="{tr(messageShiftTime)}">300</parameter>
-			<parameter type="int" name="audioShiftTime" min="0" max="500" displaytext="{tr(audioShiftTime)}">300</parameter>
+			<!--<parameter type="int" name="audioShiftTime" min="0" max="500" displaytext="{tr(audioShiftTime)}">300</parameter>-->
 			<parameter type="int" name="channelShiftTime" min="0" max="500" displaytext="{tr(channelShiftTime)}">300</parameter>
 			<parameter type="int" name="currentelementsFadeTime" min="0" max="500" displaytext="{tr(currentelementsFadeTime)}">0</parameter>
 		</submenu>
