@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE displayaudiotracks SYSTEM "../../../dtd/displayaudiotracks.dtd">
 
-<displayaudiotracks x="60%" y="40%" width="40%" height="40%" fadetime="300" shifttime="{channelShiftTime}" shifttype="bottom" shiftmode="slowed">
-
+<displayaudiotracks x="60%" y="40%" width="40%" height="40%" fadetime="0">
+<!--<displayaudiotracks x="60%" y="40%" width="40%" height="40%" fadetime="300" shifttime="{channelShiftTime}" shifttype="bottom" shiftmode="slowed">-->
 	<background>
 	</background>
 
