@@ -6,6 +6,7 @@ shady-KISS-skin History
 - Adjusted scrollheight in tab actors (hopefully fixed)
 - Reduced fontsize of timerstart-timerstop in timersmenu if only 12 listitems are shown
 - Reactivated fadetimes
+- Deactivated shift- and fadetime in audiotracks (actually in this view not supported by skindesigner)
 
 2016-02-12:
 - Fixed scaling of videowindow in weatherforecast
